Utilizing ACP preference 'Allow users to globally sort topics by created time'

--- a/kasimi/sorttopics/config/services.yml
+++ b/kasimi/sorttopics/config/services.yml
@@ -8,6 +8,7 @@ services:
             - @user
             - @auth
             - @request
+            - @config
             - @template_context
             - %kasimi.sorttopics.sort_by%
         tags:
