--- a/kasimi/sorttopics/config/services.yml
+++ b/kasimi/sorttopics/config/services.yml
@@ -18,6 +18,7 @@ services:
         arguments:
             - @user
             - @request
+            - @dbal.conn
             - @template
             - %kasimi.sorttopics.sort_by%
             - %kasimi.sorttopics.sort_order%
