--- a/kasimi/sorttopics/config/services.yml
+++ b/kasimi/sorttopics/config/services.yml
@@ -12,28 +12,28 @@ services:
         class: kasimi\sorttopics\event\viewforum_listener
         parent: kasimi.sorttopics.sort_core
         arguments:
-            - @auth
-            - @request
-            - @config
-            - %kasimi.sorttopics.sort_by%
+            - '@auth'
+            - '@request'
+            - '@config'
+            - '%kasimi.sorttopics.sort_by%'
         tags:
             - { name: event.listener }
     kasimi.sorttopics.ucp_listener:
         class: kasimi\sorttopics\event\ucp_listener
         parent: kasimi.sorttopics.sort_core
         arguments:
-            - @config
+            - '@config'
         tags:
             - { name: event.listener }
     kasimi.sorttopics.acp_listener:
         class: kasimi\sorttopics\event\acp_listener
         arguments:
-            - @user
-            - @request
-            - @config
-            - @dbal.conn
-            - @template
-            - %kasimi.sorttopics.sort_by%
-            - %kasimi.sorttopics.sort_order%
+            - '@user'
+            - '@request'
+            - '@config'
+            - '@dbal.conn'
+            - '@template'
+            - '%kasimi.sorttopics.sort_by%'
+            - '%kasimi.sorttopics.sort_order%'
         tags:
             - { name: event.listener }
