--- a/kasimi/sorttopics/composer.json
+++ b/kasimi/sorttopics/composer.json
@@ -2,15 +2,15 @@
 	"name": "kasimi/sorttopics",
 	"type": "phpbb-extension",
 	"description": "Sort Topics extends the ACP forums/categories settings by options that allows the administrator to force the way topics are sorted, overriding the user's UCP setting. Also optionally extends the UCP -> Board preferences -> Display options -> Topics ordering list by 'Created time' for each user, resulting in all topics being sorted by topic creation time when viewing any forum.",
-	"homepage": "https://github.com/kasimi",
-	"version": "1.0.3",
-	"time": "2016-05-12",
+	"homepage": "https://kasimi.net",
+	"version": "1.1.0",
+	"time": "2017-07-05",
 	"license": "GPL-2.0",
 	"authors": [
 		{
 			"name": "kasimi",
-			"email": "",
-			"homepage": "https://www.phpbb.com/community/memberlist.php?mode=viewprofile&u=1330603",
+			"email": "mail@kasimi.net",
+			"homepage": "https://kasimi.net",
 			"role": "Lead Developer"
 		}
 	],
