--- a/kasimi/sorttopics/config/services.yml
+++ b/kasimi/sorttopics/config/services.yml
@@ -6,7 +6,7 @@ services:
         class: 'kasimi\sorttopics\core\sort_core'
         abstract: true
         calls:
-            - ['set_user', ['@user']]
+            - ['set_language', ['@language']]
             - ['set_template_context', ['@template_context']]
 
     kasimi.sorttopics.viewforum_listener:
@@ -31,7 +31,7 @@ services:
     kasimi.sorttopics.acp_listener:
         class: 'kasimi\sorttopics\event\acp_listener'
         arguments:
-            - '@user'
+            - '@language'
             - '@request'
             - '@dbal.conn'
             - '@template'
