--- a/kasimi/sorttopics/config/defaults.yml
+++ b/kasimi/sorttopics/config/defaults.yml
@@ -1,3 +1,3 @@
 parameters:
-    kasimi.sorttopics.sort_by: x
-    kasimi.sorttopics.sort_order: d
+    kasimi.sorttopics.sort_by: 'x'
+    kasimi.sorttopics.sort_order: 'd'
